--- a/map.jinja
+++ b/map.jinja
@@ -7,8 +7,8 @@
         'group': 'root',
     },
     'RedHat': {
-        'pkgs': ['rsync'],
-        'service': 'rsyncd',
+        'pkgs': ['rsync', 'xinetd'],
+        'service': 'xinetd',
         'user': 'root',
         'group': 'root',
     },
