--- a/map.jinja
+++ b/map.jinja
@@ -1,5 +1,5 @@
 
-{% set proxy = salt['grains.filter_by']({
+{% set server = salt['grains.filter_by']({
     'Debian': {
         'pkgs': ['rsync'],
         'service': 'rsyncd',
